# price-scraper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  setup.cfg
price_scraper/: cli.py  enums.py  models.py
price_scraper/retailer/: __init__.py  amazon.py  base.py  best_buy.py
price_scraper/storage/: base.py  postgres.py  s3.py
tests/integration/retailer/: test_amazon.py  test_bestbuy.py
tests/unit/storage/: test_postgres.py  test_s3.py
