[metadata]
name = price_scraper
version = 0.1.0
author = Payam Vaezi
author_email = p.vaezi@gmail.com
description = A simple python package to scrape retailers website for product price updates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvaezi/price-scraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9, <3.11
install_requires =
    selenium==4.1.5
    SQLAlchemy<3.0
    pydantic>2.0,<3.0

[options.entry_points]
console_scripts =
    price_scraper = price_scraper.cli:main

[options.extras_require]
dev =
    black
    mypy
    pre-commit
    pytest
    allure-pytest
    sqlalchemy-stubs
s3 =
    boto3<2
    duckdb<1
    duckdb-engine<1
    pyarrow<15
postgres =
    psycopg2<3.0

[options.packages.find]
where = .

[isort]
profile = black

[flake8]
ignore = E203, E501, W503
